--- a/leighfisher_app/templates/Business_adv.html
+++ b/leighfisher_app/templates/Business_adv.html
@@ -25,8 +25,8 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>What is business advisory ?</h2>
+            <h3> Business Advisors are independent and experienced experts, able to offer hands on, practical help, advice and support in specific business areas that will help make a difference to business success.Business advisory services tackle all aspects of business from managing finances, marketing your product or service better and more widely, embarking on research and development activities, to improving your operations.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
