--- a/leighfisher_app/templates/trust funding.html
+++ b/leighfisher_app/templates/trust funding.html
@@ -30,20 +30,17 @@
 A traditional irrevocable trust will likely cost a minimum of a few thousand dollars and could cost much more.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-          <h3><b>What we offer!!</h3>
+          {% comment %} <h3><b><b></h3> {% endcomment %}
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Funding is sourced and structured efficiently to maximize returns and to be perfectly useful to either party enabling performance, pre-committed returns and coupon rates, and also capture any upside on the returns in case of windfall profits.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>We provide a comprehensive selection of funding solutions for claimants and professionals alike. </li>
+              <li><i class="ri-check-double-line"></i>We give opportunities for the litigant to protect their capitl nd seek justice</li>
+              <li><i class="ri-check-double-line"></i>We assist in optimising proposals/submissions to Insurers, and we use our expertise and relationships to your advantage.</li>
             </ul>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+             Funding options include equity, structured debt, bulk inventory underwriting, sale, refinancing, & many other innovative options that provide exits to both the Investors, PE Funds, Banks, NBFC’s, Lenders, and the borrower.
             </p>
           </div>
         </div>
@@ -56,8 +53,8 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
       <div class="container">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Our Hardworking Team</p>
+          <h2>Services</h2>
+          <p>Trust Funding</p>
         </div>
 
         <div class="row">
