--- a/leighfisher_app/templates/Con_infra.html
+++ b/leighfisher_app/templates/Con_infra.html
@@ -9,7 +9,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Construction Infrastructure</h2>
+          <h2>Construction/Infrastructure</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>About</li>
@@ -25,23 +25,35 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Why Us ?</h2>
+            <h3>Providing expertise at an early
+stage to ensure construction
+projects are successful.
+We have extensive experience working on
+construction projects. We have a highly flexible
+approach and methodology that allows us to tailor
+services to individual client requirements.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+            <p>We provide support in selecting and placing
+construction contracts. Plus, also help decide the
+appropriate commercial arrangements, contractor
+competency assessments, scope of supply and
+integration with the overall project timescale.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>We can assist in preparing realistic, achievable project programmes including design, procurement,contract letting, installation and commissioning. </li>
+              <li><i class="ri-check-double-line"></i>We can help clients during the crucial early stages of construction projects when decision making can either send the project on a course for success or failure.</li>
+              <li><i class="ri-check-double-line"></i>We can provide experienced personnel to
+supplement site construction teams and look after
+the client’s interests from the feasibility stage
+through to planning, design, construction and
+commissioning.</li>
             </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="font-italic">We have extensive experience working on
+construction projects. We have a highly flexible
+approach and methodology that allows us to tailor
+services to individual client requirements.
             </p>
           </div>
         </div>
