--- a/leighfisher_app/static/assets/css/style.css
+++ b/leighfisher_app/static/assets/css/style.css
@@ -88,7 +88,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 70px;
+  max-height: 80px !important;
 }
 
 @media (max-width: 992px) {
