--- a/leighfisher_app/templates/Logistics.html
+++ b/leighfisher_app/templates/Logistics.html
@@ -61,285 +61,134 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
+   <div class="container py-3">
+    <!--  <div class="title h1 text-center">Horizontal cards - Bootstrap 4</div>
+      <!-- Card Start -->
+      <div class="card">
+        <div class="row ">
 
-        <div class="row content">
-          <div class="col-lg-6">
-            <h2>What is Logistics Consultancy ?</h2>
-            <h3>The Logistics Network is what links manufacturers, suppliers, wholesalers, retailers and consumers; and is therefore a key component within the Supply Chain. Transport, warehouse and distribution centre operations are what link manufacturers to end consumers (directly or in-directly). Dependent upon a strategic planning process, the logistics network within supply chains relies heavily upon businesses taking a holistic perspective at the heart of planning their supply chain processes.</h3>
+          <div class="col-md-7 px-3">
+            <div class="card-block px-6">
+              <h2 class="card-title"> WHAT IS LOGISTICS CONSULTANCY ? </h2>
+              <p class="card-text">
+               The Logistics Network is what links manufacturers, suppliers, wholesalers, retailers and consumers; and is therefore a key component within the Supply Chain. Transport, warehouse and distribution centre operations are what link manufacturers to end consumers (directly or in-directly). Dependent upon a strategic planning process, the logistics network within supply chains relies heavily upon businesses taking a holistic perspective at the heart of planning their supply chain processes.
+              </p>
+              <p class="card-text">The cutting edge of innovation in shipment of products is Supply Chain Solutions often in response to market changes or changes in your business plans. You can save cost and time by analysing and restructuring your processes for transport, delivery and warehousing of your products.</p>
+              <br>
+            <!--  <a href="#" class="mt-auto btn btn-primary  ">Read More</a>-->
+            </div>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              The cutting edge of innovation in shipment of products is Supply Chain Solutions often in response to market changes or changes in your business plans. You can save cost and time by analysing and restructuring your processes for transport, delivery and warehousing of your products.
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i>We can provide solutions customised for your requirements and set standards to enhance your supply chain efficiency.</li>
-              <li><i class="ri-check-double-line"></i>Our Logistics Consultancy team has in-depth knowledge and experience in building and executing supply chain solutions for multiple industries.</li>
-              <li><i class="ri-check-double-line"></i>We value each of our client’s unique needs and preferences and help them by identifying the right talent basis their requirements in the changing business landscape.</li>
-            </ul>
-            <p class="font-italic">Our professionals hold expertise in offering Logistics Consultancy which includes solutions to problems like export, import, excise, customs, benefits and the overall procedures. By giving access to consolidated knowledge, specialization and resources, we have become one stop solution for our global clients.
-            </p>
-          </div>
-        </div>
+          <!-- Carousel start -->
+          <div class="col-md-5">
+            <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#CarouselTest" data-slide-to="0" class="active"></li>
+                <li data-target="#CarouselTest" data-slide-to="1"></li>
+                <li data-target="#CarouselTest" data-slide-to="2"></li>
 
-      </div>
-    </section><!-- End About Section -->
-
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Team</h2>
-          <p>Our Hardworking Team</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-6">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/Sajan.PNG' %}" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sajan </h4>
-                <span>Co-Founder</span>
-                <!-- <p>Explicabo voluptatem mollitia et repellat</p> -->
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block" src="https://picsum.photos/450/300?image=1072" alt="">
                 </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4 mt-lg-0">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/Lijo.PNG' %}" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Lijo</h4>
-                <span>Co-Founder</span>
-                <!-- <p>Aut maiores voluptates amet et quis</p> -->
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                <div class="carousel-item">
+                  <img class="d-block" src="https://picsum.photos/450/300?image=855" alt="">
                 </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/Hari.PNG' %}" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Hari</h4>
-                <span>Co-Founder</span>
-                <!-- <p>Quisquam facilis cum velit laborum corrupti</p> -->
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                <div class="carousel-item">
+                  <img class="d-block" src="https://picsum.photos/450/300?image=355" alt="">
                 </div>
+                <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+                <a class="carousel-control-next" href="#CarouselTest" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
               </div>
             </div>
           </div>
-
-          <!-- <div class="col-lg-6 mt-4">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/team/team-4.jpg' %}" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div> -->
-
+          <!-- End of carousel-->
         </div>
-
       </div>
-    </section><!-- End Team Section -->
+      <!-- End of card -->
 
-    <!-- ======= Our Skills Section ======= -->
-    <section id="skills" class="skills">
-      <div class="container">
+    </div>
+    
 
-        <div class="section-title">
-          <h2>Our Skills</h2>
-          <p>Check our Our Skills</p>
-        </div>
+    <style>
+* {
+  box-sizing: border-box;
+}
 
-        <div class="row skills-content">
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-          <div class="col-lg-6">
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
 
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
 
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
 
-          </div>
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #FF9C07;
+  padding: 40px;
+  margin: 40px;
+}
+</style>
+</head>
+<body>
+<h1 style="text-align:center;"><b> What we provide ?</h1>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <p>We value each of our client’s unique needs and preferences and help them by identifying the right talent basis their requirements in the changing business landscape.</p>
+    </div>
+  </div>
 
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Our Skills Section -->
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Testimonials</h2>
-          <ol>
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li>Testimonials</li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End Breadcrumbs -->
-
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-lg-6">
-            <div class="testimonial-item">
-              <img src="{% static 'assets/img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="testimonial-item mt-4 mt-lg-0">
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
-              <h3>Emily Harison</h3>
-              <h4>Store Owner</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Eius ipsam praesentium dolor quaerat inventore rerum odio. Quos laudantium adipisci eius. Accusamus qui iste cupiditate sed temporibus est aspernatur. Sequi officiis ea et quia quidem.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
+  <div class="column">
+    <div class="card">
+      <p>We can provide solutions customised for your requirements and set standards to enhance your supply chain efficiency.</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <p>Our Logistics Consultancy team has in-depth knowledge and experience in building and executing supply chain solutions for multiple industries.</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <p>Our professionals hold expertise in offering Logistics Consultancy which includes solutions to problems like export, import, excise, customs, benefits and the overall procedures. By giving access to consolidated knowledge, specialization and resources, we have become one stop solution for our global clients.</p>
+    </div>
+  </div>
+</div>
 
   </main><!-- End #main -->
 
